--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,102 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100vh;
+}
+
+nav {
+  display: flex;
+  padding: 20px 50px;
+  justify-content: space-between;
+}
+
+.logo {
+  text-transform: uppercase;
+  font-size: 24px;
+}
+
+.logo a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.menu {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu li {
+  display: block;
+  float: left;
+}
+
+.menu li:not(:last-child) {
+  margin-right: 20px;
+}
+
+main {
+  flex: 1;
+  width: 600px;
+  margin: 20px auto;
+}
+
+.home img {
+  width: 100%;
+}
+
+.home button {
+  width: 100%;
+  text-transform: uppercase;
+  padding: 15px 5px;
+  font-size: 20px;
+  background-color: green;
   color: white;
+  border: 0;
+  border-radius: 10px;
+  font-weight: 600;
 }
 
-.App-link {
-  color: #61dafb;
+footer {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: center;
+  background-color: rgba(219, 219, 219, 0.733);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer a {
+  font-weight: 600;
+}
+
+footer a:visited {  
+  color: inherit;
+}
+
+.post-snippet {
+  border-left: 1px solid black;
+  padding-left: 15px;
+}
+
+.publi-date {
+  font-style: italic;
+  font-size: 14px;
+}
+
+.post img {
+  max-width: 100%;
+}
+
+.author {
+  display: flex;
+}
+
+.author img {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+}
+
+.author div {
+  align-self: center;
+  margin-left: 15px;
 }
