--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@ nav {
 
 main {
   flex: 1;
-  width: 600px;
+  max-width: 600px;
   margin: 20px auto;
 }
 
@@ -99,4 +99,18 @@ footer a:visited {
 .author div {
   align-self: center;
   margin-left: 15px;
+}
+
+@media (max-width: 767px) { 
+
+  nav {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  main {
+    max-width: 100%;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
 }
